--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -57,7 +57,6 @@
                 <h2 class="title">Gestion</h2>
                 <div class="block">
                     <div>
-
                         <a href="{{ path('admin_organisms_index') }}">Partenaires</a>
                         <a href="{{ path('organisms_new') }}">Collecteurs</a>
                         <a href="{{ path('organisms_index') }}">Collectes</a>
@@ -68,13 +67,7 @@
                 </div>
             </li>
             <li class="officialDocuments">
-                <h2 class="title">Documents</h2>
-                <div class="block">
-                    <div>
-                        <a href="{{ path ('bdc_index') }}" class="officialDocumentsBc">Bons de cessions</a>
-                        <a href="#" class="officialDocumentsCi">Cartes d'identitées</a>
-                    </div>
-                </div>
+                <a href="{{ path ('bdc_index') }}" class="title">Bons de cession</a>
             </li>
         </ul>
     {% endif %}
