--- a/templates/collects/_delete_form.html.twig
+++ b/templates/collects/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('collects_delete', {'id': collect.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('collects_delete', {'id': collect.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette collecte ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ collect.id) }}">
-    <button class="btn">Delete</button>
+    <button class="fourth-button">Supprimer</button>
 </form>
