--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -59,8 +59,8 @@
                     <div>
 
                         <a href="{{ path('admin_organisms_index') }}">Partenaires</a>
-                        <a href="{{ path('organisms_new') }}">Collecteurs</a>
-                        <a href="{{ path('organisms_index') }}">Collectes</a>
+                        <a href="{{ path('collectors_index') }}">Collecteurs</a>
+                        <a href="{{ path('collects_index') }}">Collectes</a>
                         <a href="{{ path('matrice_upload') }}">Matrice</a>
                         <a href="{{ path('admin_faq_index') }}">FAQ</a>
                     </div>
@@ -72,7 +72,6 @@
                 <div class="block">
                     <div>
                         <a href="{{ path ('bdc_index') }}" class="officialDocumentsBc">Bons de cessions</a>
-                        <a href="#" class="officialDocumentsCi">Cartes d'identitées</a>
                     </div>
                 </div>
             </li>
