--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -297,12 +297,14 @@ header{
 
     .secondary-button {
         position: absolute;
-        padding: 4px 2%;
+        padding: 12px 1%;
         right: 200px;
         bottom: 94%;
-        left: 72%;
+        left: 71%;
         text-align: center;
-        width: 150px;
+        width: 183px;
+        height: 50px;
+        background-color: $primary-color;
 
     }
 
