--- a/templates/faq/_form.html.twig
+++ b/templates/faq/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
 <div class="offset-sm-2 col-sm-6 offset-sm-2 mx-auto">
-    {{ form_row(form, {'label': ' '}) }}
+    {{ form_widget(form, {'label': 'questions'}) }}
 </div>
 <div class="offset-sm-2 col-sm-8 offset-sm-2 mx-auto">
     {{ form_row(form, {'label': 'Reponses'}) }}
