correction of speelling mistake

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-11">
-                <h4>Ton téléphone a t-il été immergé dans l'eau ?</h4>
+                <h4>Ton téléphone a t-il été en contact avec de l'eau ?</h4>
             </div>
             <div class="col-1">
                 <img src="/images/info.png" alt="" title="Si ton téléphone est tombé dans l'eau, coche 'oui'"
