--- a/templates/estimation/capacity.html.twig
+++ b/templates/estimation/capacity.html.twig
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <h1 class="primary-title">Sélectionne sa mémoire</h1>
+                <h1 class="primary-title">Sélectionne sa capacité</h1>
                 <h2 class="text-dark">{{ brand }}</h2>
                 <h3 class="text-dark">{{ model.model }}</h3>
                 {% for capacity in capacities %}
