CSS in showCollects, date in french, and spelling changes

--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row align-items-center table-head rounded-top">
                 <div class="col-3 text-center">
-                    Nom Prénom
+                    Nom - Prénom
                 </div>
                 <div class="col-3 text-center">
                     Téléphone
