--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -20,4 +20,10 @@
         margin : 10px auto;
         color : $primary-color;
     }
+
+    .disconnection {
+        display: flex;
+        justify-content: center;
+        margin: 80px auto;
+    }
 }
