--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -307,6 +307,9 @@ body{
         left: 72%;
         text-align: center;
         width: 150px;
+        @media screen and (max-width: 1024px){
+            bottom: 97%;
+        }
 
     }
 
