--- a/templates/estimations/editEstim.html.twig
+++ b/templates/estimations/editEstim.html.twig
@@ -134,7 +134,7 @@
         {{ form_end(form) }}
 
         <div class="row bg-light p-4">
-            <p class="font-italic mx-auto">Pour réévaluer l'estimation, cliquez sur "mettre à jour"</p>
+            <p class="font-italic mx-auto">Pour réévaluer l'estimation, cliquez sur "Mettre à jour"</p>
         </div>
 
         <div class="row">
