--- a/assets/scss/admin-tables.scss
+++ b/assets/scss/admin-tables.scss
@@ -91,3 +91,17 @@
     }
 }
 
+#new-collect{
+    .fourth-button{
+        width : 200px;
+    }
+
+    label{
+        margin-top : 40px;
+    }
+
+    select{
+        margin-bottom : 20px;
+    }
+}
+
