--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -43,7 +43,11 @@
                     <div class="col-2 text-center ">
                         {{ estimation.estimatedPrice }} €
                     </div>
-                    {% if estimation.isCollected == 0 %}
+                    {% if estimation.isCollected == 0 and estimation.user is null %}
+                        <a class="col-2 fourth-button" href="{{ path('estimations_show', {id: estimation.id}) }}">
+                            Détails
+                        </a>
+                    {% elseif estimation.isCollected == 0 %}
                         <a class="col-2 fourth-button" href="{{ path('verifyEstim', {id: estimation.id}) }}">
                             Collecter
                         </a>
