Forget to delete a placeholder, done !

--- a/templates/bdc/editUser.html.twig
+++ b/templates/bdc/editUser.html.twig
@@ -66,7 +66,7 @@
                 0{{ estimation.user.phoneNumber }}
             </div>
             <div class="col-5 mx-auto text-left form">
-                {{ form_widget(form.phoneNumber, {'data': '02', 'attr': {'class': 'form-control mt-3', 'required': true, 'placeholder': 'truc'}}) }}
+                {{ form_widget(form.phoneNumber, {'data': '02', 'attr': {'class': 'form-control mt-3', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
