--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-12 mx-auto text-center form p-4">
+        <div class="col-lg-6 col-sm-8 mx-auto text-center form p-3">
             {{ form_start(form, {'class': 'form-group'}) }}
             {{ form_widget(form.firstname, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Prénom',
                 'label': 'Prénom', 'required': true}}) }}
