--- a/templates/faq/_delete_form.html.twig
+++ b/templates/faq/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('faq_delete', {'id': f_a_q.id}) }}" onsubmit="return confirm('Vous êtes sûr de vouloir supprimer cette ligne?');">
+<form method="post" action="{{ path('faq_delete', {'id': faq.id}) }}" onsubmit="return confirm('Vous êtes sûr de vouloir supprimer cette question?');">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('Supprimer' ~ f_a_q.id) }}">
-    <button class="fourth-button">Supprimer</button>
+    <input type="hidden" name="_token" value="{{ csrf_token('Supprimer' ~ faq.id) }}">
+    <button class="secondary-button">Supprimer</button>
 </form>
