--- a/templates/faq/_form.html.twig
+++ b/templates/faq/_form.html.twig
@@ -3,8 +3,8 @@
     {{ form_widget(form, {'label': 'questions'}) }}
 </div>
 <div class="offset-sm-2 col-sm-8 offset-sm-2 mx-auto">
-    {{ form_row(form, {'label': 'Reponses'}) }}
+    {{ form_widget(form, {'label': 'Reponses'}) }}
 </div>
     {{ form_widget(form) }}
-    <button class="fourth-button">{{ button_label|default('Enregistrer') }}</button>
+    <button class="secondary-button">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
