Boutons add en responsive sur l'admin

--- a/assets/scss/admin-tables.scss
+++ b/assets/scss/admin-tables.scss
@@ -12,26 +12,32 @@
     h2 {
         margin-bottom: 5px;
         z-index: -1;
+        @media screen and (max-width: 960px) {
+            font-size : 1rem;
+            width : 50%;
+        }
     }
 
     .add{
-        width : 16%;
-        height : 53px;
-        padding : 12px;
+        width : 150px;
+        padding : 10px;
         position : absolute;
-        right : 9%;
+        right : 50px;
         top : -18px;
         background-color: $primary-color;
         @media screen and (max-width: 1024px){
-            left: 80%;
-            top: 0;
-            width: 164px;
-            height: 48px;
+            top: -1vh;
+            right : 3vw;
+            width: 100px;
+            padding : 5px;
         }
     }
 
     .container{
         margin-top : 30px;
+        @media screen and (max-width: 1024px){
+            font-size : 0.9rem;
+        }
 
         .table-head {
             background-color: $secondary-color;
@@ -39,7 +45,7 @@
             padding: 10px;
         }
 
-        .fourth-button, .secondary-button {
+        .fourth-button, .secondary-button, .primary-button {
             margin: 10px auto;
             padding : 1px;
             width : 110px;
@@ -47,6 +53,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            @media screen and (max-width: 1024px){
+                width: 80px;
+                padding : 5px;
+                font-size: 0.8rem;
+            }
 
             a {
                 color: white;
@@ -64,13 +75,16 @@
     }
 
     .addOrganism {
+        width : 150px;
+        padding : 10px;
         position: absolute;
-        top: -13px;
-        right : 15%;
-        background-color: $primary-color;
+        right : 15vw;
+        top : -18px;
         @media screen and (max-width: 1024px){
-            left: 74%;
-            top: -23px;
+            right : 8vw;
+            top: -10px;
+            width: 100px;
+            padding : 5px;
         }
     }
 
