--- a/templates/admin/index_organism.html.twig
+++ b/templates/admin/index_organism.html.twig
@@ -12,7 +12,7 @@
     <main id="organisms">
         <h1 class="adminTitle primary-title">Les partenaires</h1>
 
-        <a class="secondary-button addOrganism" href="{{ path('organisms_new') }}">Ajouter</a>
+        <a class="primary-button addOrganism" href="{{ path('organisms_new') }}">Ajouter</a>
 
         <table class="adminPartners">
             <thead id="table-head">
