--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -21,28 +21,28 @@
             <div class="col-11">
                 <h4>Ton téléphone a t-il été en contact avec de l'eau ?</h4>
             </div>
-            <div class="col-1">
+            <div class="col-1 info-bulle">
                 <img src="/images/info.png" alt="" title="Si ton téléphone est tombé dans l'eau, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
-            <div class="col-4">
+            <div class="col-4 choice">
                 {{ form_start(form) }}
-                {{ form_widget(form.liquid_damage, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+                {{ form_widget(form.liquid_damage, {'attr': {'class': 'mx-4 p-4 choice-box', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
 
-    <div class="container jumbotron">
+    <div class="container jumbo">
         <div class="row">
             <div class="col-11">
                 <h4>Ton écran est-il endommagé ?</h4>
             </div>
-            <div class="col-1">
+            <div class="col-1 info-bulle">
                 <img src="/images/info.png" alt="" title="Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé"
                      class="w-50 h-50 d-inline">
             </div>
-            <div class="col-4">
-                {{ form_widget(form.screenCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+            <div class="col-4 choice">
+                {{ form_widget(form.screenCracks, {'attr': {'class': 'mx-4 p-4 choice-box', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -52,28 +52,28 @@
             <div class="col-11">
                 <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
-            <div class="col-1">
+            <div class="col-1 info-bulle">
                 <img src="/images/info.png" alt="" title="Fissures, griffes, mauvais emboîtement, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
-            <div class="col-4">
-                {{ form_widget(form.casingCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+            <div class="col-4 choice">
+                {{ form_widget(form.casingCracks, {'attr': {'class': 'mx-4 p-4 choice-box', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
 
-    <div class="container jumbotron">
+    <div class="container jumbo">
         <div class="row">
             <div class="col-11">
                 <h4>As-tu des problèmes de charge au niveau de la batterie ?</h4>
             </div>
-            <div class="col-1">
+            <div class="col-1 info-bulle">
                 <img src="/images/info.png" alt=""
                      title="Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
-            <div class="col-4">
-                {{ form_widget(form.batteryCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+            <div class="col-4 choice">
+                {{ form_widget(form.batteryCracks, {'attr': {'class': 'mx-4 p-4 choice-box', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -83,12 +83,12 @@
             <div class="col-11">
                 <h4>Tous les boutons sont-ils fonctionnels ?</h4>
             </div>
-            <div class="col-1">
+            <div class="col-1 info-bulle">
                 <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'non'"
                      class="w-50 h-50 d-inline">
             </div>
-            <div class="col-4">
-                {{ form_widget(form.buttonCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+            <div class="col-4 choice">
+                {{ form_widget(form.buttonCracks, {'attr': {'class': 'mx-4 p-4 choice-box', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
